frontend testing & updated readme